// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CategoryList with categories 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Categories
    </div>
    <div
      className="show-for-desktop"
    >
      Categories
    </div>
    <div
      className="show-for-desktop"
    >
      Description
    </div>
  </div>
  <div
    className="list-body"
  >
    <CategoryListItem
      description="dog costs"
      id="1"
      key="1"
      location="editCategory"
      value="Dog"
    />
    <CategoryListItem
      description="food costs"
      id="2"
      key="2"
      location="editCategory"
      value="Groceries"
    />
    <CategoryListItem
      description="car costs"
      id="3"
      key="3"
      location="editCategory"
      value="Car"
    />
  </div>
</div>
`;

exports[`should render CategoryList with no categories 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Categories
    </div>
    <div
      className="show-for-desktop"
    >
      Categories
    </div>
    <div
      className="show-for-desktop"
    >
      Description
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--message"
    >
      <span>
        No categories to show
      </span>
    </div>
  </div>
</div>
`;
